--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,6 @@ APP_PORT = 5000
 
 APP_SECRET= klsjfowfjiwfsfjslflsjfk
 
-DB_PASSWORD = BH7fE0EBCjO10550
+DB_PASSWORD = oKW5u9IQChsDNjYh
 
-DB_URI = mongodb+srv://hungvu:BH7fE0EBCjO10550@quizvti.vf8fcel.mongodb.net/?retryWrites=true&w=majority&appName=QuizVti
+DB_URI = mongodb+srv://hungvu:oKW5u9IQChsDNjYh@quizvti.vf8fcel.mongodb.net/?retryWrites=true&w=majority&appName=QuizVti
