--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "^5.3.6",
+    "@ant-design/icons": "^5.3.7",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify/tailwind": "^1.0.1",
     "tailwindcss": "^3.4.3"
   }
 }
